tests/paczka2/big_fuzzy/10549597.err
Error in line 11: kAr A595 41,8
Error in line 8: R9tXpY4MOg A595 170,1
Error in line 27: gLsiX A595 42,8
Error in line 33: gLsiX A361 37,00
Error in line 34: xwwx S290 58,5
Error in line 29: gLsiX A361 45,7
Error in line 32: YHRTMwqs A595 146,3
Error in line 54: YHRTMwqs A361 -1,3
Error in line 52: 7w4NapUSgY A595 73,1
Error in line 63: YHRTMwqs A595 8,3
Error in line 66: xwwx S290 150,4
Error in line 78: R9tXpYÚMOg A595 90,Ú
Error in line 65: YHRTMwqs S462 38,0
Error in line 76: R9tXpY4MOg S290 8,9
Error in line 83: gLsiX S290 30,2
Error in line 80: YHRTMwqs A361 93,6
Error in line 93: kAr S462 56,6
Error in line 98: gLsiX S290 15,1
Error in line 81: R9tXpY4MOg A595 212,4
Error in line 102: R9tXpY4MOg S290 68,1
Error in line 101: gLsiX S462 55,5
Error in line 104: gLsiX A361 93,0
Error in line 95: YHRTMwqs A595 65,4
Error in line 110: R9tXpY4MOg A595 41,9
Error in line 106: YHRTMwqs S462 40,1
Error in line 127: 7w4NapUSgY S462 115,42
Error in line 122: 7w4NapUSgY S462 33,6
Error in line 132: 7w4NapUSgY A361 89,7
Error in line 134: 7w4NapUSgY S462 90,4
Error in line 137: 7w4NapUSgY A595 88,5
Error in line 142: kAr A595 4,8
Error in line 151: S462 A361 28,8
Error in line 154: S462 S290 57,7
Error in line 167: R9tXpY4MOg A595 -2,55
Error in line 153: 7w4NapUSgY A361 96,0
Error in line 173: 7w4NapUSgY S290 89,3
Error in line 170: xwwx S462 51,7
Error in line 177: kAr A361 97,8
Error in line 186: kAr A595 50,9
Error in line 187: 7w4NapUSgY S290 97,1
Error in line 159: R9tXpY4MOg A595 76,2
Error in line 201: S462 A595 930
Error in line 195: YHRTMwqs S462 165,2
Error in line 203: 7w4NapUSgY A36? 73,6
Error in line 210: S462 A595 405,5
Error in line 212: 7w4NapUSgY A361 91,0
Error in line 219: xwwx A595 82,5
Error in line 224: gLsiX S462 10,8
Error in line 245: R9tXpY4MOg S462 0,0
Error in line 242: kAr S290 97,6
